kubernetes/monitoring/kibana/kibana.yml
# ---
# Source: https://www.digitalocean.com/community/tutorials/how-to-set-up-an-elasticsearch-fluentd-and-kibana-monitoring-logging-stack-on-kubernetes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: kibana
  template:
    metadata:
      labels:
        task: monitoring
        k8s-app: kibana
    spec:
      containers:
      - name: kibana
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 300m
            memory: 1Gi
        ports:
        - containerPort: 5601 
        image: kibana:7.9.1
        volumeMounts:
          - name: kibana-config-volume
            mountPath: /usr/share/kibana/config/kibana.yml
            subPath: kibana.yml
      volumes:
      - name: kibana-config-volume
        configMap:
          name: kibana-config
          items:
          - key: kibana.yml
            path: kibana.yml
          defaultMode: 0744
---
apiVersion: v1
kind: Service
metadata:
  labels:
    task: monitoring
    kubernetes.io/cluster-service: 'true'
    kubernetes.io/name: kibana
  name: kibana
  namespace: monitoring
spec:
  ports:
  - port: 80
    targetPort: 5601
  selector:
    k8s-app: kibana
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: monitoring
spec:
  rules:
  - host: kibana.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 80


---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kibana-tls
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`kibana.bas`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: kibana
      port: 80
  tls:
    secretName: kibana-bas-tls
